@@ -8,6 +8,7 @@ Version 0.9.0alpha5 - 2007-03-XX
    * Original Metadata not greyed out when no tracks are attached. (#2461)
    * Better detecting of the default Windows browser, with fallback to
      Internet Explorer. (#2502)
+   * Better album/track lookup. (#2521)
 
 Version 0.9.0alpha4 - 2007-03-09
  * Bug Fixes:
